--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -51,6 +51,6 @@ jobs:
           DB_PATH: seen.db
           MAX_POSTS: "10"
           DRY_RUN: "true"                      # ← 送信せずログとSummaryに出す 11/1 一時的に追加
-          HTML_FIXTURE: "fixtures/shigaku_event.html"  # ← ここを追記 11/1 一時的に追加
+          HTML_FIXTURE: "fixtures/shigaku_events.html"  # ← ここを追記 11/1 一時的に追加
         run: |
           python -u main.py
